--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+     <title>toll</title>
 <body>
 <button onclick="myFunction('like')">Like</button>
 <button onclick="myFunction('nhantien')">Nhantien</button><hr>
