--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
      <title>toll</title>
 <body>
-<button onclick="myFunction('like')">Like</button>
-<button onclick="myFunction('nhantien')">Nhantien</button>
-<button onclick="myFunction('thuan')">Thuần</button>
-<button onclick="myFunction('huy')">HuyBeeg</button><hr>
+<div style='text-align: center;margin: 10px;'>
+     <button onclick="myFunction('like')">Like</button>
+     <button onclick="myFunction('nhantien')">Nhantien</button>
+     <button onclick="myFunction('thuan')">Thuần</button>
+     <button onclick="myFunction('huy')">HuyBeeg</button>
+</div>
 
 <textarea id="like" rows="7" cols="60">
 var array = 
@@ -36,7 +38,9 @@ if (delta > 0) {
     document.getElementById('themvip').click()
 }
 </textarea>
-
+<div>
+    <img src="https://3.bp.blogspot.com/-zvxVmDupyGo/VKYOR1Fn6vI/AAAAAAAACl0/sYzW2qN5ReM/s1600/tumblr_ms8ygmzpZ21szgkgbo3_500.gif">
+</div>
 <script>
 function myFunction(id) {
   var copyText = document.getElementById(id);
