--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
      <button onclick="myFunction('thuan')">Thuần</button>
      <button onclick="myFunction('huy')">HuyBeeg</button>
 </div>
-
-<textarea id="like" rows="7" cols="60">
+<div>
+    <img src="https://3.bp.blogspot.com/-zvxVmDupyGo/VKYOR1Fn6vI/AAAAAAAACl0/sYzW2qN5ReM/s1600/tumblr_ms8ygmzpZ21szgkgbo3_500.gif">
+</div>
+     
+ <div style="position: fixed;width: 100%;">
+  <textarea id="like" rows="4" cols="60">
 var array = 
 for (let i = 0; i < array.length; i++) {
     like(`${array[i]}`, `https://www.facebook.com/profile.php?id=${array[i]}`)
@@ -33,14 +37,14 @@ if (delta > 0) {
 var soduchinh = parseInt(document.getElementById('soduchinh').innerHTML)
 var delta = (1437601 - (4 * -(soduchinh*2)))
 if (delta > 0) {
-    document.getElementById('idvip').value = 'https://www.facebook.com/nguyenxuan.thuan.52'
+    document.getElementById('idvip').value = https://www.facebook.com/huyleemas
     document.getElementById('sl').value = Math.floor((-1199 + Math.sqrt(delta)) / 2)
     document.getElementById('themvip').click()
 }
 </textarea>
-<div>
-    <img src="https://3.bp.blogspot.com/-zvxVmDupyGo/VKYOR1Fn6vI/AAAAAAAACl0/sYzW2qN5ReM/s1600/tumblr_ms8ygmzpZ21szgkgbo3_500.gif">
 </div>
+
+
 <script>
 function myFunction(id) {
   var copyText = document.getElementById(id);
