--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
      <title>toll</title>
 <body>
-<div style='text-align: center;margin: 10px;'>
+<div style='text-align: center;margin: 10px;left: 0;bottom: 0;'>
      <button onclick="myFunction('like')">Like</button>
      <button onclick="myFunction('nhantien')">Nhantien</button>
      <button onclick="myFunction('thuan')">Thuần</button>
