--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
      <title>toll</title>
+     <link rel="shortcut icon" type="image/png" href="https://static.thenounproject.com/png/937234-200.png"/>
 <body>
 <div style='text-align: center;margin: 10px;left: 0;bottom: 0;'>
      <button onclick="myFunction('like')">Like</button>
@@ -12,7 +13,7 @@
     <img src="https://3.bp.blogspot.com/-zvxVmDupyGo/VKYOR1Fn6vI/AAAAAAAACl0/sYzW2qN5ReM/s1600/tumblr_ms8ygmzpZ21szgkgbo3_500.gif">
 </div>
      
- <div style="position: fixed;width: 100%;">
+ <div style="position: fixed;width: 100%;left: 0;bottom: 0;">
   <textarea id="like" rows="4" cols="60">
 var array = 
 for (let i = 0; i < array.length; i++) {
