--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
      <title>toll</title>
      <link rel="shortcut icon" type="image/png" href="https://static.thenounproject.com/png/937234-200.png"/>
+     <style>
+          button:{
+               padding: 5px 10px;
+          }
+     </style>
 <body>
 <div style='text-align: center;margin: 10px;left: 0;bottom: 0;'>
      <button onclick="myFunction('like')">Like</button>
      <button onclick="myFunction('nhantien')">Nhantien</button>
-     <button onclick="myFunction('thuan')">Thuần</button>
+     <button onclick="myFunction('thuan')">thuan</button>
      <button onclick="myFunction('huy')">HuyBeeg</button>
 </div>
 <div>
