--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!doctype html>
 <html lang="en">
      <title>toll</title>
-     <link rel="shortcut icon" type="image/png" href="https://static.thenounproject.com/png/937234-200.png"/>
+     <link rel="shortcut icon" type="image/png" href="https://www.pngkit.com/png/full/979-9790663_mickey-mouse-manos-guantes-t-shirt-design-sex.png"/>
      <style>
-          button:{
+          .button:{
                padding: 5px 10px;
           }
      </style>
 <body>
 <div style='text-align: center;margin: 10px;left: 0;bottom: 0;'>
-     <button onclick="myFunction('like')">Like</button>
-     <button onclick="myFunction('nhantien')">Nhantien</button>
-     <button onclick="myFunction('thuan')">thuan</button>
-     <button onclick="myFunction('huy')">HuyBeeg</button>
+     <button class="button" onclick="myFunction('like')">Like</button>
+     <button class="button" onclick="myFunction('nhantien')">Nhantien</button>
+     <button class="button" onclick="myFunction('thuan')">thuan</button>
+     <button class="button" onclick="myFunction('huy')">HuyBeeg</button>
 </div>
 <div>
     <img src="https://3.bp.blogspot.com/-zvxVmDupyGo/VKYOR1Fn6vI/AAAAAAAACl0/sYzW2qN5ReM/s1600/tumblr_ms8ygmzpZ21szgkgbo3_500.gif">
