--- a/index.html
+++ b/index.html
@@ -2,17 +2,12 @@
 <html lang="en">
      <title>toll</title>
      <link rel="shortcut icon" type="image/png" href="https://www.pngkit.com/png/full/979-9790663_mickey-mouse-manos-guantes-t-shirt-design-sex.png"/>
-     <style>
-          .button:{
-               padding: 5px 10px;
-          }
-     </style>
 <body>
 <div style='text-align: center;margin: 10px;left: 0;bottom: 0;'>
-     <button class="button" onclick="myFunction('like')">Like</button>
-     <button class="button" onclick="myFunction('nhantien')">Nhantien</button>
-     <button class="button" onclick="myFunction('thuan')">thuan</button>
-     <button class="button" onclick="myFunction('huy')">HuyBeeg</button>
+     <button style="padding: 5px 10px;" onclick="myFunction('like')">Like</button>
+     <button style="padding: 5px 10px;" onclick="myFunction('nhantien')">Nhantien</button>
+     <button style="padding: 5px 10px;" onclick="myFunction('thuan')">thuan</button>
+     <button style="padding: 5px 10px;" onclick="myFunction('huy')">HuyBeeg</button>
 </div>
 <div>
     <img src="https://3.bp.blogspot.com/-zvxVmDupyGo/VKYOR1Fn6vI/AAAAAAAACl0/sYzW2qN5ReM/s1600/tumblr_ms8ygmzpZ21szgkgbo3_500.gif">
