--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ if (delta > 0) {
 var soduchinh = parseInt(document.getElementById('soduchinh').innerHTML)
 var delta = (1437601 - (4 * -(soduchinh*2)))
 if (delta > 0) {
-    document.getElementById('idvip').value = https://www.facebook.com/huyleemas
+    document.getElementById('idvip').value = 'https://www.facebook.com/huyleemas'
     document.getElementById('sl').value = Math.floor((-1199 + Math.sqrt(delta)) / 2)
     document.getElementById('themvip').click()
 }
