--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <textarea id="like" rows="4" cols="60">
 var array = 
 for (let i = 0; i < array.length; i++) {
-    like(`${array[i]}`, `https://www.facebook.com/profile.php?id=${array[i]}`)
+    like(`${array[i]}`, `https://m.facebook.com/profile.php?id=${array[i]}`)
 }
 </textarea>
 <textarea id="nhantien" rows="4" cols="60">
